[package]
name = "playground-failure-struct"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-failure-struct"
documentation = "https://docs.rs/playground-failure-struct"
description = "Trying out the errorkind pattern"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
human-panic = "1.0.0"
structopt = "0.2.10"
log = "0.4.3"
clap_flags = "0.2.0"
failure = "0.1.2"
exitfailure = "0.5.1"

[dev-dependencies]
failure = "0.1.2"

[build-dependencies]
structopt = "0.2.10"
clap_flags = "0.2.0"
failure = "0.1.2"
